--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+spring.datasource.driverclassname=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:Qayam
+spring.datasource.username=Hr
+spring.datasource.password=hr
